# aoc-template

./: .gitignore  CMakeLists.txt  README.md  main.cpp  puzzle.cpp  puzzle.h  test.cpp  vcpkg.json
